add : starter by autoConfigurate